# rag-fast-api

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: logger.py  main.py  resources.py  routes.py
app/clients/: elastic.py  openai.py
app/core/: api.py  llm.py  manager.py  schema.py
app/utils/: exceptions.py  fastapi_wrapper.py  file_reader.py
